# parakeet

./: Makefile.am  README.md  autogen.sh  configure.ac
conf/: log.conf  parakeet.xml
lib/: pax_global_header
libfranksip/: Makefile.am  internal.h  osip_list.c  osip_port.c  osip_port.h  sdp_accessor.c  sdp_message.c  sdp_message.h  sip_authorization.c  sip_authorization.h  sip_contact.c  sip_contact.h  sip_content_type.c  sip_content_type.h  sip_cseq.c  sip_cseq.h  sip_message.c  sip_message.h  sip_params.c  sip_params.h  sip_route.c  sip_route.h  sip_session_expires.c  sip_session_expires.h  sip_supported.c  sip_supported.h  sip_uri.c  sip_uri.h  sip_utils.h  sip_via.c  sip_via.h  sip_www_authenticate.c  sip_www_authenticate.h
scripts/: yntsynth-1.pcm
src/: Makefile.am  parakeet_audio.c  parakeet_audio.h  parakeet_buffer.c  parakeet_buffer.h  parakeet_codec.c  parakeet_codec.h  parakeet_com.h  parakeet_config.c  parakeet_config.h  parakeet_core_file.c  parakeet_core_file.h  parakeet_core_mysqldb.c  parakeet_core_mysqldb.h  parakeet_core_sniffer.c  parakeet_core_sniffer.h  parakeet_event_socket.c  parakeet_event_socket.h  parakeet_lua_base.c  parakeet_lua_base.h  parakeet_lua_http.c  parakeet_lua_http.h  parakeet_main.c  parakeet_session.c  parakeet_session.h  parakeet_stream.c  parakeet_stream.h  parakeet_types.h  parakeet_utils.h  wav_analysis.c  wav_analysis.h  wave_struct.c  wave_struct.h
